--- a/lib/better_errors/templates/main.erb
+++ b/lib/better_errors/templates/main.erb
@@ -731,7 +731,7 @@
     <div class='top'>
         <header class="exception">
             <h2><strong><%= exception.class %></strong> <span>at <%= request_path %></span></h2>
-            <p><%= exception_message %></p>
+            <p title="<%= exception_message %>"><%= exception_message %></p>
         </header>
     </div>
 
