--- a/lib/better_errors/templates/main.erb
+++ b/lib/better_errors/templates/main.erb
@@ -180,6 +180,7 @@
         padding-right: 20px;
         overflow-y: auto;
         word-wrap: break-word;
+        white-space: pre-wrap;
         height: auto;
         max-height: 7em;
     }
