--- a/lib/better_errors/templates/main.erb
+++ b/lib/better_errors/templates/main.erb
@@ -907,10 +907,12 @@
         } else if(ev.keyCode == 38 || (ev.ctrlKey && ev.keyCode == 80)) {
             // the user pressed the up arrow or Ctrl-P
             this.onNavigateHistory(-1);
+            ev.preventDefault();
             return false;
         } else if(ev.keyCode == 40 || (ev.ctrlKey && ev.keyCode == 78)) {
             // the user pressed the down arrow or Ctrl-N
             this.onNavigateHistory(1);
+            ev.preventDefault();
             return false;
         }
     };
