--- a/lib/better_errors/templates/variable_info.erb
+++ b/lib/better_errors/templates/variable_info.erb
@@ -1,7 +1,16 @@
 <header class="trace_info clearfix">
     <div class="title">
         <h2 class="name"><%= @frame.name %></h2>
-        <div class="location"><span class="filename"><a href="<%= editor_url(@frame) %>"><%= @frame.pretty_path %></a></span></div>
+        <div class="location">
+          <% if BetterErrors.editors.length == 1 %><%# Show original style URL when only one editor is given %>
+            <span class="filename"><a href="<%= editor_url(BetterErrors.editors.first, @frame) %>"><%= @frame.pretty_path %></a></span>
+          <% else %>
+            <span class="filename"><%= @frame.pretty_path %></span>
+            <% BetterErrors.editors.each do |editor| %><%# Display a link for each editor defined %>
+              <a href="<%= editor_url(editor, @frame) %>">[ <%= editor_name(editor, @frame) %> ]</a>
+            <% end %>
+          <% end %>
+        </div>
     </div>
     <div class="code_block clearfix">
         <%== html_formatted_code_block @frame %>
