--- a/lib/better_errors/templates/variable_info.erb
+++ b/lib/better_errors/templates/variable_info.erb
@@ -12,6 +12,7 @@
             <div class="console">
                 <pre></pre>
                 <div class="prompt"><span>&gt;&gt;</span> <input/></div>
+                <div class="clear_output"><a href='#'>Clear Shell</a></div>
             </div>
         </div>
     <% end %>
