--- a/lib/better_errors/templates/main.erb
+++ b/lib/better_errors/templates/main.erb
@@ -732,7 +732,7 @@
     <div class='top'>
         <header class="exception">
             <h2><strong><%= exception_type %></strong> <span>at <%= request_path %></span></h2>
-            <p><%= exception_message %></p>
+            <p><%= exception_message.strip %></p>
         </header>
     </div>
 
