set background color to make select exception message look better

--- a/lib/better_errors/templates/main.erb
+++ b/lib/better_errors/templates/main.erb
@@ -170,6 +170,14 @@
         color: white;
     }
 
+    header.exception p::-moz-selection {
+        background: rgba(255, 255, 255, 0.1);
+    }
+
+    header.exception p::selection {
+        background: rgba(255, 255, 255, 0.1);
+    }
+
     header.exception:hover {
         height: auto;
         z-index: 2;
