--- a/lib/better_errors/templates/variable_info.erb
+++ b/lib/better_errors/templates/variable_info.erb
@@ -8,10 +8,10 @@
     </div>
 
     <% if BetterErrors.binding_of_caller_available? && @frame.frame_binding %>
-        <div class="repl">
-            <div class="console">
+        <div class="be-repl">
+            <div class="be-console">
                 <pre></pre>
-                <div class="prompt"><span>&gt;&gt;</span> <input/></div>
+                <div class="prompt"><span class=''>&gt;&gt;</span> <input/></div>
             </div>
         </div>
     <% end %>
