--- a/lib/better_errors/templates/variable_info.erb
+++ b/lib/better_errors/templates/variable_info.erb
@@ -11,7 +11,7 @@
         <div class="be-repl">
             <div class="be-console">
                 <pre></pre>
-                <div class="prompt"><span class=''>&gt;&gt;</span> <input/></div>
+                <div class="command-line"><span class='prompt'>&gt;&gt;</span> <input/></div>
             </div>
         </div>
     <% end %>
