--- a/lib/better_errors/templates/main.css
+++ b/lib/better_errors/templates/main.css
@@ -90,12 +90,10 @@ html {
     overflow-y: auto;
     overflow-x: hidden;
   }
-
+  
   nav.sidebar {
     width: 40%;
-    left: 20px;
-    top: 115px;
-    bottom: 20px;
+    left: 0;
   }
 
   .frame_info {
@@ -110,9 +108,6 @@ html {
 
 nav.sidebar {
   background: #d3d3da;
-  border-top: solid 3px #a33;
-  border-bottom: solid 3px #a33;
-  border-radius: 4px;
   box-shadow: 0 0 6px rgba(0, 0, 0, 0.2), inset 0 0 0 1px rgba(0, 0, 0, 0.1);
 }
 
