--- a/lib/better_errors/templates/main.css
+++ b/lib/better_errors/templates/main.css
@@ -29,7 +29,7 @@ body, td, input, textarea {
 }
 
 html {
-  background: #f0f0f5;
+  background: white;
 }
 
 .clearfix::after{
@@ -114,11 +114,6 @@ ul.frames {
   overflow: auto;
 }
 
-nav.sidebar {
-  background: #d3d3da;
-  box-shadow: 0 0 6px rgba(0, 0, 0, 0.2), inset 0 0 0 1px rgba(0, 0, 0, 0.1);
-}
-
 /* ---------------------------------------------------------------------
  * Header
  * --------------------------------------------------------------------- */
@@ -134,7 +129,6 @@ header.exception {
   background-color: #20202a;
   color: #aaa;
   font-weight: 200;
-  box-shadow: inset 0 -5px 3px -3px rgba(0, 0, 0, 0.05), inset 0 -1px 0 rgba(0, 0, 0, 0.05);
 
   -webkit-text-smoothing: antialiased;
 }
@@ -205,8 +199,6 @@ nav.tabs {
   text-align: center;
 
   padding: 6px;
-
-  box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.1);
 }
 
 nav.tabs a {
@@ -227,7 +219,6 @@ nav.tabs a.selected {
   color: white;
   background: rgba(0, 0, 0, 0.5);
   border-radius: 16px;
-  box-shadow: 1px 1px 0 rgba(255, 255, 255, 0.1);
 }
 
 nav.tabs a.disabled {
@@ -240,17 +231,12 @@ nav.tabs a.disabled {
  * --------------------------------------------------------------------- */
 
 ul.frames {
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 
 /* Each item */
 ul.frames li {
-  background-color: #f8f8f8;
-  background: -webkit-linear-gradient(top, #f8f8f8 80%, #f0f0f0);
-  background: -moz-linear-gradient(top, #f8f8f8 80%, #f0f0f0);
-  background: linear-gradient(top, #f8f8f8 80%, #f0f0f0);
-  box-shadow: inset 0 -1px 0 #e2e2e2;
   padding: 7px 20px;
+  border-bottom: 1pt solid #eee;
 
   cursor: pointer;
   overflow: hidden;
@@ -283,7 +269,6 @@ ul.frames .line {
 /* Selected frame */
 ul.frames li.selected {
   background: #38a;
-  box-shadow: inset 0 1px 0 rgba(0, 0, 0, 0.1), inset 0 2px 0 rgba(255, 255, 255, 0.01), inset 0 -1px 0 rgba(0, 0, 0, 0.1);
 }
 
 ul.frames li.selected .name,
@@ -427,8 +412,6 @@ pre, code, .be-repl input, .be-repl .command-line span, textarea, .code_linenums
 .code, .be-console, .unavailable {
   background: #fff;
   padding: 5px;
-
-  box-shadow: inset 3px 3px 3px rgba(0, 0, 0, 0.1), inset 0 0 0 1px rgba(0, 0, 0, 0.1);
 }
 
 .code_linenums{
@@ -577,7 +560,6 @@ p.unavailable:before {
 
   border-radius: 2px;
   background: rgba(0, 150, 200, 0.05);
-  box-shadow: 1px 1px 0 rgba(255, 255, 255, 0.7), inset 0 0 0 1px rgba(0, 0, 0, 0.04), inset 2px 2px 2px rgba(0, 0, 0, 0.07);
 }
 
 .sub h3 {
