--- a/lib/better_errors/templates/main.erb
+++ b/lib/better_errors/templates/main.erb
@@ -58,9 +58,8 @@
 
     <section class="backtrace">
         <nav class="sidebar">
-            <nav class="tabs">
-                <a href="#" id="application_frames">Application Frames</a>
-                <a href="#" id="all_frames">All Frames</a>
+            <nav class="segmented">
+                <a href="#" id="application_frames">Application Frames</a><a href="#" id="all_frames">All Frames</a>
             </nav>
             <ul class="frames">
                 <% backtrace_frames.each_with_index do |frame, index| %>
