--- a/lib/better_errors/templates/variable_info.erb
+++ b/lib/better_errors/templates/variable_info.erb
@@ -1,8 +1,8 @@
 <header class="trace_info clearfix">
-    <div class="title">
-        <h2 class="name"><%= @frame.name %></h2>
+    <h2 class="title">
+        <div class="name">#<%= @frame.name %></div>
         <div class="location"><span class="filename"><a href="<%= editor_url(@frame) %>"><%= @frame.pretty_path %></a></span></div>
-    </div>
+    </h2>
     <div class="code_block clearfix">
         <%== html_formatted_code_block @frame %>
     </div>
@@ -31,42 +31,29 @@
     </div>
 <% end %>
 
-<div class="sub">
-    <h3>Request info</h3>
-    <div class='inset variables'>
-        <table class="var_table">
-            <% if rails_params %>
-                <tr><td class="name">Request parameters</td><td><pre><%== inspect_value rails_params %></pre></td></tr>
-            <% end %>
-            <% if rack_session %>
-                <tr><td class="name">Rack session</td><td><pre><%== inspect_value rack_session %></pre></td></tr>
-            <% end %>
-        </table>
-    </div>
-</div>
+<div class="variables">
+    <h3>Request Info</h3>
+    <% if rails_params %>
+        <h4 class="name">Request Parameters</h4>
+        <pre><%== inspect_value rails_params %></pre>
+    <% end %>
+    <% if rack_session %>
+        <h4 class="name">Rack Session</h4>
+        <pre><%== inspect_value rack_session %></pre>
+    <% end %>
 
 <% if BetterErrors.binding_of_caller_available? && @frame.frame_binding %>
-    <div class="sub">
-        <h3>Local Variables</h3>
-        <div class='inset variables'>
-            <table class="var_table">
-                <% @frame.local_variables.each do |name, value| %>
-                    <tr><td class="name"><%= name %></td><td><pre><%== inspect_value value %></pre></td></tr>
-                <% end %>
-            </table>
-        </div>
-    </div>
+    <h3>Local Variables</h3>
+    <% @frame.local_variables.each do |name, value| %>
+        <h4 class="name"><%= name %></h4>
+        <pre><%== inspect_value value %></pre>
+    <% end %>
 
-    <div class="sub">
-        <h3>Instance Variables</h3>
-        <div class="inset variables">
-            <table class="var_table">
-                <% @frame.instance_variables.each do |name, value| %>
-                    <tr><td class="name"><%= name %></td><td><pre><%== inspect_value value %></pre></td></tr>
-                <% end %>
-            </table>
-        </div>
-    </div>
+    <h3>Instance Variables (<%= @frame.class_name %>)</h3>
+    <% @frame.instance_variables.each do |name, value| %>
+        <h4 class="name"><%= name %></h4>
+        <pre><%== inspect_value value %></pre>
+    <% end %>
 
     <!-- <%= Time.now.to_f - @var_start_time %> seconds -->
 <% end %>
