--- a/lib/better_errors/templates/main.erb
+++ b/lib/better_errors/templates/main.erb
@@ -6,7 +6,7 @@
 <body>
     <%# Stylesheets are placed in the <body> for Turbolinks compatibility. %>
     <style type='text/css'>
-      <%= File.open(File.expand_path("templates/main.css", File.dirname(__FILE__))).read %>
+      <%== File.open(File.expand_path("templates/main.css", File.dirname(__FILE__))).read %>
     </style>
 
     <%# IE8 compatibility crap %>
