--- a/style/main.scss
+++ b/style/main.scss
@@ -1,3 +1,5 @@
+@import "syntax_highlighting";
+
 /* Basic reset */
 * {
   margin: 0;
@@ -373,63 +375,66 @@ ul.frames .icon.application:before {
  * Monospace
  * --------------------------------------------------------------------- */
 
-pre, code, .be-repl .command-line input, .be-repl .command-line .prompt, .be-repl .output .command, textarea, .code_linenums, .title .name,
+pre,
+code,
+.be-repl .command-line input,
+.be-repl .command-line .prompt,
+.be-repl .output .command,
+textarea,
+.code_linenums,
+.title .name,
 ul.frames li .method {
   font-family: menlo, lucida console, monospace;
 }
 
-/* ---------------------------------------------------------------------
- * Display area
- * --------------------------------------------------------------------- */
+.trace_info {
+  .title {
+    background: #38a;
+    color: white;
 
-.code_block {
-  background: #f1f1f1;
-  padding-bottom: 1px;
-}
+    overflow: hidden;
+    padding: 5px 10px;
 
-/* Titlebar */
-.trace_info .title {
-  background: #38a;
-  color: white;
+    @media screen and (min-width: 1100px) {
+      padding: 5px 10px 5px 0;
+    }
 
-  overflow: hidden;
-  padding: 5px 10px;
-}
-@media screen and (min-width: 1100px) {
-  .trace_info .title {
-    padding: 5px 10px 5px 0;
+    .name, .location {
+      font-size: 9pt;
+      line-height: 26px;
+      height: 26px;
+      overflow: hidden;
+    }
+
+    .location {
+      float: left;
+      font-weight: bold;
+      font-size: 10pt;
+
+      a {
+        color: white;
+        text-decoration: none;
+
+        .filename {
+          text-decoration: underline;
+        }
+
+        &:hover {
+          border-color:#666666;
+        }
+      }
+    }
+
+    .name {
+      float: right;
+      font-weight: 200;
+    }
   }
-}
 
-.trace_info .title .name,
-.trace_info .title .location {
-  font-size: 9pt;
-  line-height: 26px;
-  height: 26px;
-  overflow: hidden;
-}
-
-.trace_info .title .location {
-  float: left;
-  font-weight: bold;
-  font-size: 10pt;
-}
-
-.trace_info .title .location a {
-  color:white;
-  text-decoration: none;
-}
-.trace_info .title .location a .filename {
-  text-decoration: underline;
-}
-
-.trace_info .title .location a:hover {
-  border-color:#666666;
-}
-
-.trace_info .title .name {
-  float: right;
-  font-weight: 200;
+  .code_block {
+    background: #f1f1f1;
+    padding-bottom: 1px;
+  }
 }
 
 .code_linenums{
@@ -437,10 +442,10 @@ ul.frames li .method {
   padding-top:10px;
   padding-bottom:9px;
   float:left;
-}
 
-.code_linenums pre{
-  padding:0 6px;
+  pre{
+    padding: 0 6px;
+  }
 }
 
 .code {
@@ -448,15 +453,24 @@ ul.frames li .method {
   border-top-left-radius:2px;
   padding: 10px 0;
   overflow: auto;
+
+  pre {
+    padding-left:12px;
+  }
 }
 
-.code pre{
-  padding-left:12px;
-}
+.code, .code_linenums {
+  pre {
+    font-size: 11px;
+    min-height: 16px;
+  }
 
-.code pre, .code_linenums pre {
-  font-size: 11px;
-  min-height:16px;
+  .highlight {
+    background: rgba(220, 30, 30, 0.1);
+    -webkit-animation: highlight 400ms linear 1;
+    -moz-animation: highlight 400ms linear 1;
+    animation: highlight 400ms linear 1;
+  }
 }
 
 /* Source unavailable */
@@ -465,18 +479,18 @@ p.unavailable {
   text-align: center;
   color: #b99;
   font-weight: bold;
-}
 
-p.unavailable:before {
-  content: '\00d7';
-  display: block;
+  &:before {
+    content: '\00d7';
+    display: block;
 
-  color: #daa;
+    color: #daa;
 
-  text-align: center;
-  font-size: 40pt;
-  font-weight: normal;
-  margin-bottom: -10px;
+    text-align: center;
+    font-size: 40pt;
+    font-weight: normal;
+    margin-bottom: -10px;
+  }
 }
 
 @-webkit-keyframes highlight {
@@ -492,13 +506,6 @@ p.unavailable:before {
   100% { background: rgba(220, 30, 30, 0.1); }
 }
 
-.code .highlight, .code_linenums .highlight {
-  background: rgba(220, 30, 30, 0.1);
-  -webkit-animation: highlight 400ms linear 1;
-  -moz-animation: highlight 400ms linear 1;
-  animation: highlight 400ms linear 1;
-}
-
 h3 {
   background-color: #38a;
   color: white;
@@ -508,88 +515,83 @@ h3 {
   -webkit-font-smoothing: antialiased;
 }
 
-/* REPL shell */
 .be-console {
   background-color: #002B36;
   color: white;
-}
 
-.be-console .output {
-  max-height: 15rem;
-  overflow-x: hidden;
-  overflow-y: auto;
+  .output {
+    max-height: 15rem;
+    overflow-x: hidden;
+    overflow-y: auto;
 
-  padding: 8px;
-  border-bottom: 1px solid #ccc;
-}
-.be-console .output:not(.used) {
-  padding: 0;
-  border-bottom: 0;
-}
-@media screen and (min-height: 800px) {
-  .be-console .output {
-    max-height: 25rem;
+    padding: 8px;
+    border-bottom: 1px solid #ccc;
+
+    &:not(.used) {
+      padding: 0;
+      border-bottom: 0;
+    }
+    @media screen and (min-height: 800px) {
+      max-height: 25rem;
+    }
+
+    pre, h4 {
+      font-size: 9pt;
+      word-wrap: break-word;
+      white-space: pre-wrap;
+      width: 100%;
+    }
+    h4 {
+      padding: 8px;
+      margin-top: 10px;
+      background-color: #555;
+      &:first-child {
+        margin-top: 0;
+      }
+    }
+
+    pre {
+      padding: 8px;
+    }
+  }
+
+  /* .command-line > span + input */
+  .command-line {
+    display: table;
+    padding: 8px 0;
+    background-color: #555;
+
+    .prompt,
+    input {
+      display: table-cell;
+      line-height: 12px;
+      font-size: 9pt;
+    }
+
+    .prompt {
+      width: 1%;
+      padding-right: 5px;
+      padding-left: 10px;
+      white-space: pre;
+    }
+
+    input {
+      width: 99%;
+    }
+  }
+
+  /* Input box */
+  input,
+  input:focus {
+    outline: 0;
+    border: 0;
+    padding: 0;
+    background: transparent;
+    margin: 0;
+    color: inherit;
   }
 }
 
-.be-console .output pre, .be-console .output h4 {
-  font-size: 9pt;
-  word-wrap: break-word;
-  white-space: pre-wrap;
-  width: 100%;
-}
-.be-console .output h4 {
-  padding: 8px;
-  margin-top: 10px;
-}
-.be-console .output h4:first-child {
-  margin-top: 0;
-}
-
-.be-console .output h4, .be-console .command-line {
-  background-color: #555;
-}
-
-.be-console .output pre {
-  padding: 8px;
-}
-
-/* .command-line > span + input */
-.be-console .command-line {
-  display: table;
-  padding: 8px 0;
-}
-
-.be-console .command-line .prompt,
-.be-console .command-line input {
-  display: table-cell;
-  line-height: 12px;
-  font-size: 9pt;
-}
-
-.be-console .command-line .prompt {
-  width: 1%;
-  padding-right: 5px;
-  padding-left: 10px;
-  white-space: pre;
-}
-
-.be-console .command-line input {
-  width: 99%;
-}
-
-/* Input box */
-.be-console input,
-.be-console input:focus {
-  outline: 0;
-  border: 0;
-  padding: 0;
-  background: transparent;
-  margin: 0;
-  color: inherit;
-}
-
-/* Hint text */
 .hint {
   margin: 15px 0 20px 0;
   font-size: 8pt;
@@ -597,153 +599,34 @@ h3 {
   padding-left: 20px;
 }
 
-/* ---------------------------------------------------------------------
- * Variable infos
- * --------------------------------------------------------------------- */
+.variables {
+  h4 {
+    margin-top: 5px;
+    padding-left: 5px;
 
-.variables h4 {
-  margin-top: 5px;
-  padding-left: 5px;
+    font-weight: bold;
+    font-size: 9pt;
 
-  font-weight: bold;
-  font-size: 9pt;
+    word-wrap: break-word;
+  }
 
-  word-wrap: break-word;
+  pre {
+    max-height: 15em;
+    overflow-y: auto;
+
+    font-size: 9pt;
+    word-wrap: break-word;
+    white-space: normal;
+
+    margin-left: 2rem;
+    border-bottom: 1px dotted #ddd;
+  }
+
+  /* "(object doesn't support inspect)" */
+  .unsupported {
+    display: block;
+    font-family: sans-serif;
+    color: #777;
+  }
 }
 
-.variables pre {
-  max-height: 15em;
-  overflow-y: auto;
-
-  font-size: 9pt;
-  word-wrap: break-word;
-  white-space: normal;
-
-  margin-left: 2rem;
-  border-bottom: 1px dotted #ddd;
-}
-
-/* "(object doesn't support inspect)" */
-.variables .unsupported {
-  display: block;
-  font-family: sans-serif;
-  color: #777;
-}
-
-/* ---------------------------------------------------------------------
- * Scrollbar
- * --------------------------------------------------------------------- */
-
-nav.sidebar::-webkit-scrollbar,
-.inset pre::-webkit-scrollbar,
-.be-console pre::-webkit-scrollbar,
-.code::-webkit-scrollbar {
-  width: 10px;
-  height: 10px;
-}
-
-.inset pre::-webkit-scrollbar-thumb,
-.be-console pre::-webkit-scrollbar-thumb,
-.code::-webkit-scrollbar-thumb {
-  background: #ccc;
-  border-radius: 5px;
-}
-
-nav.sidebar::-webkit-scrollbar-thumb {
-  background: rgba(0, 0, 0, 0.0);
-  border-radius: 5px;
-}
-
-nav.sidebar:hover::-webkit-scrollbar-thumb {
-  background-color: #999;
-  background: -webkit-linear-gradient(left, #aaa, #999);
-}
-
-.be-console pre:hover::-webkit-scrollbar-thumb,
-.inset pre:hover::-webkit-scrollbar-thumb,
-.code:hover::-webkit-scrollbar-thumb {
-  background: #888;
-}
-
-
-.CodeRay .debug{color:#fff;background:#00f}
-.CodeRay .annotation{color:#586E75}
-.CodeRay .attribute-name{color:#93A1A1}
-.CodeRay .attribute-value{color:#93A1A1}
-.CodeRay .binary{color:#509}
-.CodeRay .char .content{color:#d20}
-.CodeRay .char .delimiter{color:#710}
-.CodeRay .char{color:#2AA198}
-.CodeRay .class{color:#268BD2;font-weight:bold}
-.CodeRay .class-variable{color:#268BD2}
-.CodeRay .color{color:#eee8d5}
-.CodeRay .comment{color:#586E75}
-.CodeRay .comment .char{color:#859900}
-.CodeRay .comment .delimiter{color:#859900}
-.CodeRay .complex{color:#a08}
-.CodeRay .constant{color:#B58900;font-weight:bold}
-.CodeRay .decorator{color:#268BD2}
-.CodeRay .definition{color:#099;font-weight:bold}
-.CodeRay .delimiter{color:#000}
-.CodeRay .directive{color:#088;font-weight:bold}
-.CodeRay .doc{color:#93A1A1}
-.CodeRay .doc-string{color:#93A1A1;font-weight:bold}
-.CodeRay .doctype{color:#DC322F}
-.CodeRay .entity{color:#CB4B16;font-weight:bold}
-.CodeRay .error{color:#93A1A1;background-color:#faa}
-.CodeRay .escape{color:#CB4B16}
-.CodeRay .exception{color:#CB4B16;font-weight:bold}
-.CodeRay .float{color:#2AA198}
-.CodeRay .function{color:#268BD2;font-weight:bold}
-.CodeRay .global-variable{color:#268BD2}
-.CodeRay .hex{color:#2AA198}
-.CodeRay .imaginary{color:#f00}
-.CodeRay .include{color:#b44;font-weight:bold}
-.CodeRay .inline{background-color:transparent;color:#93A1A1!important}
-.CodeRay .inline-delimiter{font-weight:bold;color:#DC322F}
-.CodeRay .instance-variable{color:#268BD2}
-.CodeRay .integer{color:#2AA198}
-.CodeRay .key .char{color:#DC322F}
-.CodeRay .key .delimiter{color:#268BD2}
-.CodeRay .key{color:#859900}
-.CodeRay .keyword{color:#859900;font-weight:bold}
-.CodeRay .label{color:#93A1A1;font-weight:bold}
-.CodeRay .local-variable{color:#268BD2}
-.CodeRay .namespace{color:#859900;font-weight:bold}
-.CodeRay .octal{color:#2AA198}
-.CodeRay .operator, .predefined{color:#859900;font-weight:bold}
-.CodeRay .predefined-constant{color:#2AA198}
-.CodeRay .predefined-type{color:#DC322F;font-weight:bold}
-.CodeRay .preprocessor{color:#859900}
-.CodeRay .pseudo-class{color:#859900;font-weight:bold}
-.CodeRay .regexp .content{color:#2AA198}
-.CodeRay .regexp .delimiter{color:#DC322F}
-.CodeRay .regexp .modifier{color:#CB4B16}
-.CodeRay .regexp{background-color:transparent}
-.CodeRay .reserved{color:#268BD2;font-weight:bold}
-.CodeRay .shell .content{color:#2b2}
-.CodeRay .shell .delimiter{color:#161}
-.CodeRay .shell{background-color:transparent}
-.CodeRay .string .char{color:#2AA198}
-.CodeRay .string .content{color:#2AA198}
-.CodeRay .string .delimiter{color:#DC322F}
-.CodeRay .string .modifier{color:#2AA198}
-.CodeRay .string{background-color:transparent}
-.CodeRay .symbol .content{color:#2AA198}
-.CodeRay .symbol .delimiter{color:#2AA198}
-.CodeRay .symbol{color:#2AA198}
-.CodeRay .tag{color: #268BD2}
-.CodeRay .type{color:#DC322F;font-weight:bold}
-.CodeRay .value{color:#268BD2}
-.CodeRay .variable{color:#268BD2}
-.CodeRay .insert{background:transparent}
-.CodeRay .delete{background:transparent}
-.CodeRay .change{color:#CB4B16;background:transparent}
-.CodeRay .head{color:#CB4B16;background:transparent}
-.CodeRay .head .filename{color:#CB4B16}
-.CodeRay .delete .eyecatcher{background-color:rgba(255,0,0,0.2);border:1px solid rgba(230,0,0,0.5);margin:-1px;border-bottom:none;border-top-left-radius:5px;border-top-right-radius:5px}
-.CodeRay .insert .eyecatcher{background-color:rgba(0,255,0,0.2);border:1px solid rgba(0,128,0,0.5);margin:-1px;border-top:none;border-bottom-left-radius:5px;border-bottom-right-radius:5px}
-.CodeRay .insert .insert{color:#CB4B16;background:transparent;font-weight:bold}
-.CodeRay .delete .delete{color:#2AA198;background:transparent;font-weight:bold}
-.CodeRay .change .change{color:#CB4B16}
-.CodeRay .head .head{color:#CB4B16}
